--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,9 @@ body {
   height: 150px;
   line-height: 150px;
 }
+
 #header a {
+  margin-left: 100px;
   color: white;
   text-decoration: none;
   text-transform: uppercase;
@@ -30,9 +32,13 @@ body {
 }
 #header-nav li {
   display: inline;
-  padding-left: 20px;
+//  padding-left: ;
 }
-.post-datecontainer {
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.post-container {
   max-width: 1000px;
   margin: 0 auto;
 }
@@ -44,6 +50,10 @@ body {
 #footer {
   background-color: #2f2f2f;
   padding: 50px 0;
+
+}
+#footer p, h4 {
+  margin-left: 150px;
 }
 .column {
   min-width: 300px;
@@ -72,8 +82,8 @@ a:hover {
 }
 
 .post-author img {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   vertical-align: middle;
 }
 .about-author img {
