--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ a:hover {
   margin-left: 16px;
 }
 .post-date {
-  color: #D4D4D4;
+  color: black;
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 0.1em
